tests/snapshots/integration__integration_tests__configure_shell__configure_shell_zsh.snap
---
source: tests/integration_tests/configure_shell.rs
info:
  program: wt
  args:
    - configure-shell
    - "--shell"
    - zsh
    - "--yes"
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmp8d5PlC
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
Added [1mzsh[0m [TEMP_HOME]/.zshrc
[40m [0m if command -v wt >/dev/null 2>&1; then eval "$(wt init zsh)"; fi

✅ [32mConfigured 1 shell[0m

💡 [2mRestart your shell or run: source <config-file>[0m

----- stderr -----
